# UCO

Segundo/IS/: CMakeLists.txt  IMPORTANTE_LEER.txt  instrucciones.txt
Segundo/IS/src/: CMakeLists.txt
Segundo/IS/src/archivos/: Inscripciones.txt  ListaActividades.txt  usuarios.txt
Segundo/IS/src/funciones/: CMakeLists.txt  funciones.cc  funciones.h
Segundo/IS/src/programa-main/: CMakeLists.txt  programa-main.cc
Segundo/IS/src/usuario/: CMakeLists.txt  usuario.cc  usuario.h
Segundo/IS/tests/: CMakeLists.txt  lib-test.cc
Tercero/CyC/p1/: Frecuencias  analisis.py  analisis_frecuencia.py  reordenamiento_bloque.py  reordenamiento_palabra.py
Tercero/CyC/p2/: analisis_afin.py  analisis_afin2.py  cifrado_afin.py  cifrado_hill.py
Tercero/CyC/p3/: criptoanalisis.py  ej1.py  ej2.py  ej3.py
Tercero/CyC/p4/: ej1.py  ej2.py  ej3.py  ej4.py  ej5.py  ej6.py  ej7.py  ej8.py  ej9.py
Tercero/IMD/p1/: ej2.py  ej3.py  ej4.py  ej5.py  ej6.py  ej8.py  generar_graficos.py
Tercero/IMD/p1/p1_2/: ej2.py  ej3.py  ej4-5.py
